# GSAP

./: .appveyor.yml  .clang-format  .codecov.yml  .travis.yml  CMakeLists.txt  README.md  compiler_flags.cmake
Test/: CMakeLists.txt  RunTests.ps1  runTests.sh
Test/BenchmarkPrognoser/: BenchmarkPrognoser.cpp  BenchmarkPrognoser.h  CMakeLists.txt  main.cpp
Test/batteryPrognoserTests/: BatteryPrognoserTests.cpp  BatteryPrognoserTests.h  CMakeLists.txt  main.cpp
Test/commCollectionTests/: CMakeLists.txt  CommTests.cpp  CommTests.h  main.cpp
Test/frameworkTests/: CMakeLists.txt  CommonCommunicatorTests.cpp  CommonCommunicatorTests.h  CommunicatorTests.h  FrameworkTests.cpp  FrameworkTests.h  FrameworkTests.h.gch  ProgManagerTests.cpp  ProgManagerTests.h  main.cpp
Test/gsapTests/: CMakeLists.txt  CommunicatorTests.cpp  CommunicatorTests.h  ConfigMapTests.cpp  ConfigMapTests.h  DPointTests.cpp  DPointTests.h  DPointsTests.cpp  DataStoreTests.h  DynamicArrayTests.cpp  DynamicArrayTests.h  EventDrivenPrognoserTests.cpp  EventDrivenPrognoserTests.h  FrameworkTests.cpp  FrameworkTests.h  LoadTests.cpp  MatrixTests.cpp  MatrixTests.h  MockClasses.h  ModelBasedPrognoserTests.cpp  ModelBasedPrognoserTests.h  ModelTests.cpp  ModelTests.h  ObserverTests.cpp  ObserverTests.h  PEventTests.cpp  PEventTests.h  ParticleFilterTests.cpp  PredictorTests.cpp  PredictorTests.h  ProgDataTests.cpp  ProgDataTests.h  ProgManagerTests.cpp  ProgManagerTests.h  StatisticalToolsTests.h  TCPSocketTests.cpp  TCPSocketTests.h  Test.cfg  TrajectoryServiceTests.cpp  TrajectoryServiceTests.h  (+5 more)
Test/inc/: Tank3.h  Test.h  TestPrognoser.h
Test/src/: EmptyPrognoser.cpp  Tank3.cpp  TestPrognoser.cpp
Test/supportTests/: CMakeLists.txt  ConfigMapTests.cpp  ConfigMapTests.h  ConfigMapTests.h.gch  ConstLoadTests.cpp  ConstLoadTests.hpp  DPointTests.cpp  DPointTests.h  DPointTests.h.gch  DPointsTests.cpp  DPointsTests.h  DataStoreTests.cpp  DataStoreTests.h  DataStoreTests.h.gch  GaussianVariableTests.cpp  LoadTests.cpp  LoadTests.hpp  MatrixTests.cpp  MatrixTests.h  ModelTests.cpp  ModelTests.h  ObserverTests.cpp  ObserverTests.h  OptimizerTests.cpp  OptimizerTests.h  PEventTests.cpp  PEventTests.h  PEventTests.h.gch  ParticleFilterTests.cpp  ParticleFilterTests.h  PredictorTests.cpp  PredictorTests.h  ProgDataTests.cpp  ProgDataTests.h  ProgDataTests.h.gch  StatisticalToolsTests.cpp  TCPSocketTests.cpp  TCPSocketTests.h  TCPTests.cpp  TCPTests.h  (+10 more)
benchmarking/: CMakeLists.txt
benchmarking/cfg/: example_async.cfg
benchmarking/data/: BatteryPlayback.txt
benchmarking/src/: main-async.cpp  main.cpp
example/: CMakeLists.txt  install-CMakeLists.txt  progMain.cpp
example/cfg/: Battery.cfg  BatteryPlayback.cfg  BatteryPrognoser.cfg  BenchmarkPrognoser.cfg  BenchmarkPrognoser0.cfg  EdgeBattery.cfg  ModelBasedPrognoser1.cfg  ModelBasedPrognoser2.cfg  ModelBasedPrognoser3.cfg  ModelBasedPrognoser4.cfg  ModelBasedPrognoser5.cfg  ModelBasedPrognoser6.cfg  ModelBasedPrognoser7.cfg  ModelBasedPrognoser8.cfg  Playback.cfg  RandomComm.cfg  Recorder.cfg  bench.cfg  benchMT.cfg  benchmarkPAD.cfg  comp1.cfg  comp2.cfg  incomplete.cfg  prog.cfg
example/data/: PlaybackScn1Constant.txt  PlaybackScn2Constant.txt  PlaybackScn3Constant.txt  PlaybackScn4Variable.txt
examples/async/: CMakeLists.txt  example.cfg  main.cpp
framework/: CMakeLists.txt
framework/inc/: Battery.h  BatteryEOL.h  BenchmarkTest.h  CommManager.h  CommonCommunicator.h  CommonPrognoser.h  CommunicatorFactory.h  ModelBasedPrognoser.h  ModelFactory.h  PlaybackCommunicator.h  ProgManager.h  PrognoserFactory.h  RandomCommunicator.h  RecorderCommunicator.h  STDINCommunicator.h  SharedLib.h  StringUtils.h
framework/src/: Battery.cpp  BatteryEOL.cpp  BatteryModel.cpp  CommManager.cpp  CommonCommunicator.cpp  CommonPrognoser.cpp  ModelBasedPrognoser.cpp  PlaybackCommunicator.cpp  ProgManager.cpp  Prognoser.cpp  RandomCommunicator.cpp  RecorderCommunicator.cpp  STDINCommunicator.cpp
support/: CMakeLists.txt
support/inc/: Benchmark.h  BenchmarkTimer.h  ConfigMap.h  ConstLoadEstimator.h  DataPoint.h  DataPoints.h  DataStore.h  Datum.h  Exceptions.h  Factory.h  GSAPConfigMap.h  GaussianVariable.h  LoadEstimator.h  LoadEstimatorFactory.h  Matrix.h  Model.h  ModelBasedPredictor.h  ModelFactory.h  MonteCarloPredictor.h  MonteCarloSampler.h  MovingAverageLoadEstimator.h  Observer.h  ObserverFactory.h  Optimizer.h  PContainer.h  ParticleFilter.h  ParticleSwarmOptimizer.h  Predictor.h  Predictor2.h  PredictorFactory.h  ProgContainers.h  ProgData.h  ProgEvent.h  ProgEvents.h  ProgMeta.h  PrognosticsModel.h  PrognosticsModelFactory.h  Sampler.h  Singleton.h  StatisticalTools.h  (+10 more)
support/src/: ConfigMap.cpp  ConstLoadEstimator.cpp  DataPoint.cpp  DataPoints.cpp  GSAPConfigMap.cpp  GaussianVariable.cpp  Matrix.cpp  Model.cpp  ModelBasedPredictor.cpp  MonteCarloPredictor.cpp  MonteCarloSampler.cpp  MovingAverageLoadEstimator.cpp  Observer.cpp  Optimizer.cpp  ParticleFilter.cpp  ParticleSwarmOptimizer.cpp  Predictor.cpp  ProgContainers.cpp  ProgData.cpp  ProgEvent.cpp  ProgEvents.cpp  ProgMeta.cpp  PrognosticsModel.cpp  STDINCommunicator.cpp  StatisticalTools.cpp  TCPServer.cpp  TCPSocket.cpp  TCPSocketServer.cpp  Thread.cpp  ThreadSafeLog.cpp  UDPServer.cpp  UDPSocket.cpp  UData.cpp  UDataInterfaces.cpp  UnscentedKalmanFilter.cpp
templates/: CMakeLists.txt  EmptyCommunicator.cpp  EmptyCommunicator.h  EmptyModel.cpp  EmptyModel.h  EmptyObserver.cpp  EmptyObserver.h  EmptyPredictor.cpp  EmptyPredictor.h  EmptyPrognoser.cpp  EmptyPrognoser.h  EmptyPrognosticsModel.cpp  EmptyPrognosticsModel.h
tests/: CMakeLists.txt  RunTests.ps1  runTests.sh
tests/inc/: EventDrivenPrognoserTests.h  GaussianVariableTests.h  MockClasses.h  Tank3.h  Test.h  TestPrognoser.h
tests/src/: AsyncIntegrationTests.cpp  AsyncPrognoserTests.cpp  CentrifugalPumpModelTests.cpp  CircuitBatteryTests.cpp  ConfigMapTests.cpp  DPointTests.cpp  DPointsTests.cpp  DataStoreTests.cpp  DynamicArrayTests.cpp  EventDrivenPrognoserTests.cpp  GaussianVariableTests.cpp  MatrixTests.cpp  ModelTests.cpp  Tank3.cpp  (+10 more)
(+211 files in other folders)
